# figma-audit

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUDIT_CONFORMITE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  figma-audit.example.yaml  figma-audit.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/integrations/flutter/: INTEGRATION.md  figma_audit_bridge.dart
docs/integrations/flutter/audits/: 01-navigation-go-vs-push.md  02-stateful-urls.md  03-wizard-urls.md  04-semantics.md  README.md
figma_audit/: __init__.py  __main__.py  config.py  models.py
figma_audit/api/: app.py  deps.py
figma_audit/api/routes/: discrepancies.py  htmx.py  projects.py  runs.py  screens.py  web.py
figma_audit/api/routes/web/: __init__.py  _state.py  dashboard.py  projects.py  runs.py  uploads.py
figma_audit/cli/: __init__.py  agents.py  group.py  imports.py  phases.py  run.py  serve.py  setup.py
figma_audit/db/: engine.py  models.py
figma_audit/phases/: analyze_code.py  capture_app.py  compare.py  export_figma.py  match_screens.py  report.py  setup_test_data.py
figma_audit/phases/analyze_code/: __init__.py  agentic.py  discovery.py  one_shot.py  validator.py
figma_audit/phases/capture_app/: __init__.py  api_client.py  browser.py  runner.py  templates.py
figma_audit/utils/: agent_context.py  agent_loop.py  agent_tools.py  checks.py  claude_client.py  color.py  fig_parser.py  figma_client.py  progress.py
figma_audit/web/: __init__.py
figma_audit/web/static/: style.css
figma_audit/web/templates/: base.html  comparison.html  dashboard.html  new_project.html  project.html  run.html  run_progress.html  screens.html  upload_progress.html
scripts/: sync_to_github.sh
templates/: report.html.j2
tests/: test_agent_http_tools.py  test_agent_loop.py  test_agent_tools.py  test_analyze_code_helpers.py  test_analyze_validator.py  test_api.py  test_browser_navigation.py  test_capturable_states.py  test_checks_and_config.py  test_claude_client.py  test_color.py  test_config.py  test_fig_parser.py  test_htmx.py  test_jwt_sub.py  test_models.py  test_progress.py  test_reach_paths.py  test_setup_dag.py  test_setup_test_data.py
