[project]
name = "figma-audit"
version = "0.1.0"
description = "Automated design conformity audits: compare your Figma designs against your deployed app and get a detailed discrepancy report."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Seb Bassompierre", email = "sbassompierre@kaseilabs.com" },
]
keywords = [
    "figma",
    "design-audit",
    "visual-regression",
    "design-system",
    "playwright",
    "claude",
    "anthropic",
    "qa",
    "ui-testing",
    "design-review",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "anthropic>=0.40",
    "playwright>=1.40",
    "requests>=2.31",
    "Pillow>=10.0",
    "click>=8.1",
    "pydantic>=2.0",
    "Jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "zstandard>=0.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/sbassomp/figma-audit"
Repository = "https://github.com/sbassomp/figma-audit"
Issues = "https://github.com/sbassomp/figma-audit/issues"
Changelog = "https://github.com/sbassomp/figma-audit/blob/main/CHANGELOG.md"

[project.scripts]
figma-audit = "figma_audit.__main__:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["figma_audit*"]

[tool.setuptools.package-data]
figma_audit = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
